--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@payloadcms/plugin-cloud-storage": "3.52.0",
     "@payloadcms/richtext-lexical": "3.52.0",
     "@payloadcms/storage-s3": "3.52.0",
+    "@payloadcms/translations": "3.52.0",
     "@payloadcms/ui": "3.52.0",
     "@types/node": "^22.5.4",
     "@types/react": "19.1.0",
